syntax = "proto2";
package com.subterranean_security.crimson.core.proto;

import "net/sequences/Keylogger.proto";
import "net/sequences/Listener.proto";
import "net/misc/Misc.proto";

message MI_TriggerProfileDelta {
	repeated ProfileTimestamp profile_timestamp = 1;
}

message ProfileTimestamp {
	required int32 cvid = 1;
	required int64 timestamp = 2;
}

message AttributeGroupContainer {
	required int32 group_type = 1;
	required string group_id = 2;
	required int32 attribute_type = 3;
	required string value = 4;
}

message EV_ProfileDelta {

	required int32 cvid = 1;
	optional int64 departure_time = 2;
	
	// Simple attributes
	map<int32, string> str_attr = 3;
	
	// Group attributes
	repeated AttributeGroupContainer group_attr = 10;
	
	// Nonstring attributes
	optional bool fig = 5;
	
}

message EV_ServerProfileDelta {
	optional bool server_status = 1;
	optional int32 user_count = 2;
	optional int32 client_count = 3;
	
	repeated ListenerConfig listener = 4;
	
	optional string cpu_model = 6;
	optional string cpu_temp = 7;
	optional string cpu_speed = 8;
	optional string cpu_crimson_usage = 9;
	
	optional string ram_crimson_usage = 10;
	
	optional string java_version = 11;
	optional string os_family = 12;
	optional string crimson_version = 14;
	
	repeated EV_ViewerProfileDelta viewer_user = 15;
	repeated AuthMethod auth_method = 16;
}

message EV_ViewerProfileDelta {
	optional string user = 1;
	optional int64 last_login_time = 2;
	optional string last_login_ip = 3;
	optional int64 login_time = 4;
	optional string login_ip = 5;
	repeated int64 viewer_permissions = 6;
}