package com.subterranean_security.crimson.core.proto;

message MI_StreamStart {
	required Param param = 1;
}

message MI_StreamStop {
	required int32 streamID = 1;
}

message EV_StreamData {
	required int32 streamID = 1;
}

message Param {
	required int32 streamID = 1;
	required int32 VID = 2;
	optional int32 CID = 3;
	optional InfoParam info_param = 4;
}

message InfoParam {
	optional bool active_window = 1;
	optional bool cpu_speed = 2;
	optional bool cpu_temp = 3;
	optional bool cpu_usage = 4;
	optional bool ram_usage = 5;
}
